# Blender_Python

./: .gitignore  README.md  pyproject.toml
src/: PrintObjectInfo.py  README.md  SurveyBlenderFiles.py  memo.md
