[project]
name = "blender-python"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fake-bpy-module-4-2>=20241010",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blender_python"]
